--- a/vegas/public/index.html
+++ b/vegas/public/index.html
@@ -3,49 +3,45 @@
 <html ng-app="PearsonVegas">
   <head>
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
     <title>Pearson Goes Vegas</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css"/>
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300 |Grand+Hotel' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/scripts.js"></script>
-<script>
 
-<!-- JQUERY FOR SLIDING NAVIGATION -->   
-$(document).ready(function() {
-  $('a[href*=#]').each(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
-    && location.hostname == this.hostname
-    && this.hash.replace(/#/,'') ) {
-      var $targetId = $(this.hash), $targetAnchor = $('[name=' + this.hash.slice(1) +']');
-      var $target = $targetId.length ? $targetId : $targetAnchor.length ? $targetAnchor : false;
-       if ($target) {
-         var targetOffset = $target.offset().top;
+	<script>
 
-<!-- JQUERY CLICK FUNCTION REMOVE AND ADD CLASS "ACTIVE" + SCROLL TO THE #DIV-->   
-         $(this).click(function() {
-            $("#nav li a").removeClass("active");
-            $(this).addClass('active');
-           $('html, body').animate({scrollTop: targetOffset}, 1250);
-           return false;
-         });
-      }
-    }
-  });
-});
+	<!-- JQUERY FOR SLIDING NAVIGATION -->   
+	$(document).ready(function() {
+	  $('a[href*=#]').each(function() {
+	    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+	    && location.hostname == this.hostname
+	    && this.hash.replace(/#/,'') ) {
+	      var $targetId = $(this.hash), $targetAnchor = $('[name=' + this.hash.slice(1) +']');
+	      var $target = $targetId.length ? $targetId : $targetAnchor.length ? $targetAnchor : false;
+	       if ($target) {
+	         var targetOffset = $target.offset().top;
+
+	<!-- JQUERY CLICK FUNCTION REMOVE AND ADD CLASS "ACTIVE" + SCROLL TO THE #DIV-->   
+	         $(this).click(function() {
+	            $("#nav li a").removeClass("active");
+	            $(this).addClass('active');
+	           $('html, body').animate({scrollTop: targetOffset}, 1000);
+	           return false;
+	         });
+	      }
+	    }
+	  });
+	});
 
 </script>
-
 </head>
 
 <body>	
-<!-- Header Start -->
+	<!-- Header Start -->
 	<header id="header">
-	<div class="content">
-	<div id="logo"> <a href=""></a></div>
 		<nav id="nav">
 			<ul>
 				<li><a href="#slide1" class="active" title="Next Section" >WELCOME</a></li>
@@ -54,7 +50,6 @@ $(document).ready(function() {
 				<li><a href="#slide4" title="Next Section">ATTENDEES</a></li>
 			</ul>
 		</nav>
-	</div>
 	</header>
 	<!-- Header End -->
  
@@ -67,7 +62,7 @@ $(document).ready(function() {
             		<td id="date"><h2>October 7 - 10, 2016</h2></td>
             	</tr>
             	<tr>
-            		<td id="attendButton"><a href="#slide4" title="Next Section"><h2>I will attend</h2></a></td>
+            		<td id="attendButton"><a href="#slide4" title="Next Section"><h2>I Will Attend</h2></a></td>
             	</tr>
             </table>
 		</div> 
@@ -88,6 +83,7 @@ $(document).ready(function() {
         	</table>
         </div>
     </div> 
+
     <div id="slide2">
 		<div class="content" >
             <div class="details_container">			
@@ -103,29 +99,27 @@ $(document).ready(function() {
 		</div> 
     </div> 	 	
 	<div id="slide4">
-<!-- 		<div class="content"> -->
-			<div class="signup_container">
-			<h1>Sign Up</h1>
-				<form ng-submit="createCtrl.create()"ng-controller="CreateAttendeeController as createCtrl">
-            	<input ng-model="createCtrl.name" type="text" placeholder="NAME" /><br/>
-            	<input ng-model="createCtrl.comment" type="text" placeholder="COMMENT" /><br/>
+		<div class="signup_container">
+		<h1>Sign Up</h1>
+			<form ng-submit="createCtrl.create()"ng-controller="CreateAttendeeController as createCtrl">
+           		<input ng-model="createCtrl.name" type="text" placeholder="Name" /><br/>
+            	<input ng-model="createCtrl.comment" type="text" placeholder="Comment" /><br/>
             	<button>I'm Coming!</button>
-            	</form>
-            </div>
-           	<br />
-            <h1>Attendees</h1>
-            <div class="attendees_container">
-            	<ul ng-controller="AttendeesListController as attendeesCtrl">
-            		<li class="attendees" ng-repeat="attendee in attendeesCtrl.attendees"><strong>{{attendee.name}}</strong> - {{attendee.comment}}</li>
-            	</ul>
-			</div> 
-		</div> 		
-			<div id="copyright">
-			&copy; 2016 Pauline Hilborn &bull;<a href="http://philbo.design/wp" target="_blank"> http://philbo.design</a> &bull; New York City 
-			</div> 
-		</div> 		
-    </div> 
+        	</form>
+        </div>
+        <br />
 
+        <h1>Attendees</h1>
+        <div class="attendees_container">
+            <ul ng-controller="AttendeesListController as attendeesCtrl">
+            	<li class="attendees" ng-repeat="attendee in attendeesCtrl.attendees"><strong>{{attendee.name}}</strong> - {{attendee.comment}}</li>
+            </ul>
+		</div> 
+	</div> 	
 
+	<div id="copyright">
+		&copy; 2016 Pauline Hilborn &bull;<a href="http://philbo.design/wp" target="_blank"> http://philbo.design</a> &bull; New York City 
+	</div> 
+	
 </body>
 </html>
