addinng responsiveness, hamburger menu

--- a/vegas/public/index.html
+++ b/vegas/public/index.html
@@ -58,8 +58,19 @@
 
 	</header>
 	<!-- Header End -->
- 
+
+	<!-- Drop Down Menu -->
+	 <div class="menu">
+	 	<ul>
+		    <a href="#slide1"><li>WELCOME</li></a>
+		    <a href="#slide2"><li>SCHEDULE</li></a>
+		    <a href="#slide3"><li>HOUSE of PAIN</li></a>
+		    <a href="#slide4"><li>ATTENDEES</li></a>
+	 	</ul>
+	</div> 
+
  	<!-- Slider 1, Landing Page -->
+
 	<div id="slide1">
 		<div class="landing_container">
             <img src="img/vegas_sign.gif" id="sign">
@@ -105,13 +116,13 @@
 	      		<tbody id="events">
 			        <tr>
 			           <th scope="row">Thursday</th>
-			           <td><a href="https://www.bellagio.com/en/casino/poker.html" class="link_white">Poker at the Bellagio</a></td>
-			           <td><a href= "https://www.google.com/maps/place/Bellagio+Hotel+and+Casino/@36.1126264,-115.1788938,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c430cb5147bd:0x82f2c7c5d9d10d84!8m2!3d36.1126264!4d-115.1767051" class="link_white">3600 Las Vegas Blvd</a></td>
+			           <td><a href="https://www.bellagio.com/en/casino/poker.html" class="white">Poker at the Bellagio</a></td>
+			           <td><a href= "https://www.google.com/maps/place/Bellagio+Hotel+and+Casino/@36.1126264,-115.1788938,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c430cb5147bd:0x82f2c7c5d9d10d84!8m2!3d36.1126264!4d-115.1767051" class="white">3600 Las Vegas Blvd</a></td>
 			        </tr>
 			        <tr>
 			           <th scope="row">Friday</th>
 			           <td>Dinner at &eacute by Jos&eacute Andr&eacuteas</td>
-			           <td><a href="https://www.google.com/maps/place/%C3%A9+by+Jos%C3%A9+Andr%C3%A9s/@36.1095493,-115.1764772,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c431a8ffb015:0x747f85df7f106007!8m2!3d36.1095493!4d-115.1742885" class="link_white">3708 S Las Vegas Blvd</td>
+			           <td><a href="https://www.google.com/maps/place/%C3%A9+by+Jos%C3%A9+Andr%C3%A9s/@36.1095493,-115.1764772,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c431a8ffb015:0x747f85df7f106007!8m2!3d36.1095493!4d-115.1742885" class="white">3708 S Las Vegas Blvd</td>
 			        </tr>
 			        <tr>
 			           <th scope="row"></th>
@@ -125,13 +136,13 @@
 			        </tr>
 			        <tr>
 			           <th scope="row"></th>
-			           <td><a href="http://xslasvegas.com/" class="link_white">XS Nightclub</a></td>
-			           <td><a href="https://www.google.com/maps/place/XS+Las+Vegas/@36.1280185,-115.1669625,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c414f11eb46f:0xf628131a7ed6deaa!8m2!3d36.1280185!4d-115.1647738" class="link_white">3131 S Las Vegas Blvd</a></td>
+			           <td><a href="http://xslasvegas.com/" class="white">XS Nightclub</a></td>
+			           <td><a href="https://www.google.com/maps/place/XS+Las+Vegas/@36.1280185,-115.1669625,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c414f11eb46f:0xf628131a7ed6deaa!8m2!3d36.1280185!4d-115.1647738" class="white">3131 S Las Vegas Blvd</a></td>
 			        </tr>
 			        <tr>
 			           <th scope="row">Sunday</th>
-			           <td><a href="http://www.venetian.com/casino/race-and-sports-book.html" class="link_white">Football at the Venetian Sports Book</a></td>
-			           <td><a href="https://www.google.com/maps/place/The+Venetian+Race+%26+Sports+Book/@36.1243076,-115.1707988,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c41586e8cbf1:0x6d463f6c97bdfc99!8m2!3d36.1243076!4d-115.1686101" class="link_white" >The Grand Canal Shoppes</a></td>
+			           <td><a href="http://www.venetian.com/casino/race-and-sports-book.html" class="white">Football at the Venetian Sports Book</a></td>
+			           <td><a href="https://www.google.com/maps/place/The+Venetian+Race+%26+Sports+Book/@36.1243076,-115.1707988,17z/data=!3m1!4b1!4m5!3m4!1s0x80c8c41586e8cbf1:0x6d463f6c97bdfc99!8m2!3d36.1243076!4d-115.1686101" class="white" >The Grand Canal Shoppes</a></td>
 			        </tr>
 	        	</tbody>
 	    	</table>
